restructure to align with landing page

--- a/_site.yml
+++ b/_site.yml
@@ -3,16 +3,18 @@ title: "Graphics principles"
 description: |
   A tutorial on effective visual communication for the quantitative scientist.
 output_dir: "."
-base_url: https://graphicsprinciples.github.io/case-studies
+base_url: https://graphicsprinciples.github.io/
 canonical_url: https://graphicsprinciples.github.io/case-studies
 navbar:
   right:
+    - text: "Home"
+      href: https://graphicsprinciples.github.io/
+    - text: "Tutorial"
+      href: https://graphicsprinciples.github.io/tutorial.html
     - text: "Case studies"
-      href: index.html
+      href: https://graphicsprinciples.github.io/tutorial-case-studies
     - text: "About"
-      href: about.html
-    - text: "Graphics principles"
-      href: https://graphicsprinciples.github.io
+      href: https://graphicsprinciples.github.io/initiative.html
     - icon: fab fa-github
       href: https://github.com/GraphicsPrinciples
 output: radix::radix_article
