add three laws post

--- a/_site.yml
+++ b/_site.yml
@@ -1,5 +1,5 @@
 name: "Graphics principles"
-title: "Graphics principles"
+title: "Case studies"
 description: |
   A tutorial on effective visual communication for the quantitative scientist.
 output_dir: "."
