--- a/_site.yml
+++ b/_site.yml
@@ -13,6 +13,8 @@ navbar:
       href: https://graphicsprinciples.github.io/tutorial.html
     - text: "Case studies"
       href: https://graphicsprinciples.github.io/tutorial-case-studies
+    - text: "Gallery"
+      href: https://graphicsprinciples.github.io/gallery/
     - text: "About"
       href: https://graphicsprinciples.github.io/initiative.html
     - icon: fab fa-github
