--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -16,8 +16,9 @@ jobs:
 
       - name: Set up Quarto
         uses: quarto-dev/quarto-actions/setup@v2
-        
-        - uses: r-lib/actions/setup-r-dependencies@v2
+
+      - name: Set up additional deps
+        uses: r-lib/actions/setup-r-dependencies@v2
         with:
           packages:
             any::knitr
