--- a/_quarto.yml
+++ b/_quarto.yml
@@ -15,7 +15,7 @@ website:
   #  background: "#1d467f" #"#0f366c" #"#00A38E" #"#D1F0EE"  #"#A7D5E8"
     
   navbar:
-    title: "graphics principles"
+    title: "case studies"
    # background: "#1d467f"
     #logo: "assets/logo.png"
     align: center #left
